# python-in-python

./: .gitignore  README.md  indexset.py  main.py  prog.py  prog2.py  pyproject.toml
bytecode/: bytecode.py  frozen_lib.py  instruction.py
common/: __init__.py  deco.py  error.py  hash.py
compiler/: compile.py  ir.py  mode.py  porcelain.py  symboltable.py
vm/: __init__.py  bytesinner.py  codecs.py  coroutine.py  dictdatatype.py  exceptions.py  frame.py  frozen.py  function_.py  import_.py  pyobject.py  pyobjectrc.py  scope.py  sequence.py  signal.py  sliceable.py  utils.py  vm.py
vm/builtins/: asyncgenerator.py  builtinfunc.py  bytearray.py  bytes.py  classmethod.py  code.py  complex.py  coroutine.py  dict.py  enumerate.py  filter.py  float.py  frame.py  function.py  generator.py  genericalias.py  getset.py  int.py  iter.py  list.py  map.py  mappingproxy.py  memory.py  module.py  namespace.py  object.py  property.py  pybool.py  pystr.py  pysuper.py  pytype.py  pyunion.py  range.py  set.py  singletons.py  slice.py  staticmethod.py  traceback.py  tuple.py  weakproxy.py  (+2 more)
vm/function/: arguments.py
vm/protocol/: buffer.py  iter.py  mapping.py  sequence.py
vm/stdlib/: __init__.py  builtins.py  imp.py  io.py  sys.py  thread.py  warnings.py  weakref.py
vm/types/: slot.py  zoo.py
