[tool.poetry]
name = "python_in_python"
version = "0.1.0"
description = ""
authors = ["twyair <yairt16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
returns = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
# warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
